# dam-firebase-mcp-server

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  credentials.json.example  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: test.yml
examples/: claude_desktop_config.json  cursor_mcp_config_venv.json  cursor_settings.json  mcp_client_config.json
src/mcp_server_firebase/: __init__.py  firebase_client.py  server.py
tests/: __init__.py  conftest.py
tests/integration/: test_mcp_protocol.py
tests/unit/: test_core_functionality.py  test_mcp_tools_simple.py
